borsh-derive/src/internals/serialize/structs/snapshots/generic_associated_type-2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<T, V> borsh::ser::BorshSerializeAsync for Parametrized<T, V>
where
    T: TraitName,
    T::Associated: borsh::ser::BorshSerializeAsync,
    V: borsh::ser::BorshSerializeAsync,
{
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <T::Associated as borsh::BorshSerializeAsync>::serialize(&self.field, writer)
            .await?;
        <V as borsh::BorshSerializeAsync>::serialize(&self.another, writer).await?;
        ::core::result::Result::Ok(())
    }
}
