borsh-derive/src/internals/serialize/structs/snapshots/generic_named_fields_struct_borsh_skip.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K, V, U> borsh::ser::BorshSerialize for G<K, V, U>
where
    U: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        borsh::BorshSerialize::serialize(&self.y, writer)?;
        ::core::result::Result::Ok(())
    }
}
