borsh-derive/src/internals/serialize/structs/snapshots/override_generic_associated_type_wrong_derive.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<T, V> borsh::ser::BorshSerialize for Parametrized<T, V>
where
    T: TraitName,
    V: borsh::ser::BorshSerialize,
    <T as TraitName>::Associated: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <<T as TraitName>::Associated as borsh::BorshSerialize>::serialize(
            &self.field,
            writer,
        )?;
        <V as borsh::BorshSerialize>::serialize(&self.another, writer)?;
        ::core::result::Result::Ok(())
    }
}
