borsh-derive/src/internals/serialize/structs/snapshots/recursive_struct-2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for CRecC {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        <String as borsh::BorshSerializeAsync>::serialize(&self.a, writer).await?;
        <HashMap<
            String,
            CRecC,
        > as borsh::BorshSerializeAsync>::serialize(&self.b, writer)
            .await?;
        ::core::result::Result::Ok(())
    }
}
